Fix blog index on Firefox; Fix img styling; Delete old blogpost

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -178,3 +178,7 @@ nav a:hover {
 .main-content li {
     margin: 1rem 0rem 1rem 0rem;
 }
+
+img {
+    width: 100%;
+}
